--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </header>
 
     <main>
-        <img class="logo" src="images/16965384-logosimple_xl.webp">
+        <img class="logo" src="images/server-icon.png">
         <div class="desc1">
             <h1>CrystalMC</h1>
             <p>The best Minecraft server for Crystal PvP: CrystalMC.</p>
