--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <nav>
             <ul>
                 <li><a href="index.html" class="anim-ul">Home</a></li>
-                <li><a href="" class="anim-ul">Store</a></li>
+                <li><a href="https://crystalmc-1.mcsets.com/" class="anim-ul">Store</a></li>
                 <li><a href="" class="anim-ul">Vote</a></li>
-                <li><a href="" class="anim-ul">Discord</a></li>
+                <li><a href="https://discord.gg/JXZFyN9Jgp" class="anim-ul">Discord</a></li>
                 <li><a href="" class="anim-ul">Contact</a></li>
             </ul>
         </nav>
@@ -46,7 +46,10 @@
             <div class="ip-box" onclick="copyIP()">
                 <div class="ip-header-box"><p class="iptext-header">IP:</p></div><p class="ip-text">crystalmc.org</p>
             </div>
-            <div class="menu-grid intro" id="menuGrid">
+            <div class="desc2">
+                <p class="desc2-text intro">Join our vibrant community of Minecraft enthusiasts and experience the thrill of Crystal PvP like never before. With a dedicated player base, regular events, and a wide range of features, CrystalMC is the ultimate destination for all your Minecraft adventures.</p>
+            </div>
+            <!-- <div class="menu-grid intro" id="menuGrid">
                 <div class="menu-item" onclick="window.open('https://crystalmc-1.mcsets.com/', '_blank'); window.location.reload();">
                     <div class="cont-logo">
                         <img src="images/4031ababfb3120d1c9e6beb8d2cf07a9a2f27740.png" alt="">
@@ -62,6 +65,7 @@
                     <p>Buy coins for CrystalMC and use them to buy exclusive in-game items.</p>
                 </div>
             </div>
+            -->
         </div>
         
     </main>
