staff team page and api

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <li><a href="https://crystalmc-1.mcsets.com/" class="anim-ul">Store</a></li>
                 <li><a href="" class="anim-ul">Vote</a></li>
                 <li><a href="https://discord.gg/JXZFyN9Jgp" class="anim-ul">Discord</a></li>
-                <li><a href="" class="anim-ul">Contact</a></li>
+                <li><a href="staff.html" class="anim-ul">Staff</a></li>
             </ul>
         </nav>
     </header>
