--- a/staff.html
+++ b/staff.html
@@ -32,7 +32,7 @@
 
     <script src="staff.js"></script>
     <footer>
-        Copyright © 2026 MarkedExiled. All rights reserved.
+        Copyright © 2026 MarkedExiled. All rights reserved. <!-- I'm so cool and important -->
     </footer>
 </body>
 </html>
